// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sqitch package dependencies [simple/1st] 1`] = `
{
  "deps": {
    "/deploy/schema_myfirstapp.sql": [],
    "/deploy/table_products.sql": [
      "my-first:schema_myfirstapp",
      "my-first:table_users",
    ],
    "/deploy/table_users.sql": [
      "my-first:schema_myfirstapp",
    ],
  },
  "external": [],
  "resolved": [
    "schema_myfirstapp",
    "table_users",
    "schema_myfirstapp",
    "schema_myfirstapp",
    "table_users",
    "table_products",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies [simple/2nd] 1`] = `
{
  "deps": {
    "/deploy/create_another_table.sql": [
      "my-second:create_table",
    ],
    "/deploy/create_schema.sql": [],
    "/deploy/create_table.sql": [
      "my-second:create_schema",
    ],
  },
  "external": [],
  "resolved": [
    "create_schema",
    "create_table",
    "create_schema",
    "create_table",
    "create_another_table",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies [simple/3rd] 1`] = `
{
  "deps": {
    "/deploy/create_schema.sql": [
      "my-second:create_table",
    ],
    "/deploy/create_table.sql": [
      "my-third:create_schema",
    ],
    "my-second:create_table": [],
  },
  "external": [
    "my-second:create_table",
  ],
  "resolved": [
    "create_schema",
    "create_table",
  ],
  "resolvedTags": {},
}
`;

exports[`sqitch package dependencies [utils] 1`] = `
{
  "deps": {
    "/deploy/procedures/myfunction.sql": [],
  },
  "external": [],
  "resolved": [
    "procedures/myfunction",
  ],
  "resolvedTags": {},
}
`;
